--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,4 @@
-MONGO_URL=mongodb+srv://uchihaItachiTrueHero:UchihaItachiTrueHero@cluster0.swmsudh.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+MONGO_URL=mongodb+srv://shovelhouse:Shovelhouse%40123@shovelhouse.ex7wu.mongodb.net/?retryWrites=true&w=majority&appName=shovelhouse
 PORT=3001
 JWT_SECRET=asjdjeg$afsg%!@vfafHDLf$*Dffgaec^%svJca/
 JWT_LIFETIME=30d
