--- a/backend/.env
+++ b/backend/.env
@@ -2,3 +2,7 @@ MONGO_URL=mongodb+srv://shovelhouse:Shovelhouse%40123@shovelhouse.ex7wu.mongodb.
 PORT=3001
 JWT_SECRET=asjdjeg$afsg%!@vfafHDLf$*Dffgaec^%svJca/
 JWT_LIFETIME=30d
+
+EMAIL_USERNAME=your-email@gmail.com
+EMAIL_PASSWORD=your-app-password-or-email-password
+EMAIL_FROM="Your Name <your-email@gmail.com>"
