--- a/pwa/package.json
+++ b/pwa/package.json
@@ -17,6 +17,7 @@
     "react-router-dom": "^6.26.1",
     "react-scripts": "5.0.1",
     "react-star-ratings": "^2.3.0",
+    "socket.io-client": "^4.7.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
