--- a/backend/package.json
+++ b/backend/package.json
@@ -24,6 +24,7 @@
     "mongoose": "^8.6.0",
     "nodemailer": "^6.9.15",
     "nodemon": "^3.1.4",
+    "react-image-file-resizer": "^0.4.8",
     "socket.io": "^4.7.5"
   }
 }
