--- a/pwa/package.json
+++ b/pwa/package.json
@@ -14,6 +14,7 @@
     "react-dom": "^18.3.1",
     "react-google-autocomplete": "^2.7.3",
     "react-icons": "^5.3.0",
+    "react-image-file-resizer": "^0.4.8",
     "react-leaflet": "^4.2.1",
     "react-router-dom": "^6.26.1",
     "react-scripts": "5.0.1",
