--- a/backend/.env
+++ b/backend/.env
@@ -6,3 +6,5 @@ JWT_LIFETIME=30d
 EMAIL_USERNAME=your-email@gmail.com
 EMAIL_PASSWORD=your-app-password-or-email-password
 EMAIL_FROM="Your Name <your-email@gmail.com>"
+
+S3_BUCKET=yet_to_define
