--- a/backend/.env
+++ b/backend/.env
@@ -1,8 +1,14 @@
 MONGO_URL=mongodb+srv://shovelhouse:Shovelhouse%40123@shovelhouse.ex7wu.mongodb.net/?retryWrites=true&w=majority&appName=shovelhouse
-PORT=3001
+PORT=3003
 JWT_SECRET=asjdjeg$afsg%!@vfafHDLf$*Dffgaec^%svJca/
 JWT_LIFETIME=30d
 
 EMAIL_USERNAME=your-email@gmail.com
 EMAIL_PASSWORD=your-app-password-or-email-password
 EMAIL_FROM="Your Name <your-email@gmail.com>"
+
+
+AWS_ACCESS_KEY_ID=acess yer
+AWS_SECRET_ACCESS_KEY=your sckey key
+S3_BUCKET_NAME=shovelhouse
+AWS_S3_REGION=ca-central-1
