mail is working now. bugs resolved

--- a/backend/.env
+++ b/backend/.env
@@ -3,12 +3,12 @@ PORT=3003
 JWT_SECRET=asjdjeg$afsg%!@vfafHDLf$*Dffgaec^%svJca/
 JWT_LIFETIME=30d
 
-EMAIL_USERNAME=your-email@gmail.com
-EMAIL_PASSWORD=your-app-password-or-email-password
-EMAIL_FROM="Your Name <your-email@gmail.com>"
+EMAIL_USERNAME=
+EMAIL_PASSWORD=
+EMAIL_FROM=
 
 
-AWS_ACCESS_KEY_ID=acess yer
-AWS_SECRET_ACCESS_KEY=your sckey key
+AWS_ACCESS_KEY_ID=key here
+AWS_SECRET_ACCESS_KEY=secret here
 S3_BUCKET_NAME=shovelhouse
 AWS_S3_REGION=ca-central-1
