new password working

--- a/backend/.env
+++ b/backend/.env
@@ -3,9 +3,9 @@ PORT=3003
 JWT_SECRET=asjdjeg$afsg%!@vfafHDLf$*Dffgaec^%svJca/
 JWT_LIFETIME=30d
 
-EMAIL_USERNAME=
-EMAIL_PASSWORD=
-EMAIL_FROM=
+EMAIL_USERNAME=abdurrehmankazim68@gmail.com
+EMAIL_PASSWORD=etfv mmcv pywf pnur
+EMAIL_FROM=abdurrehmankazim68@gmail.com
 
 
 AWS_ACCESS_KEY_ID=key here
