--- a/pwa/package.json
+++ b/pwa/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@react-google-maps/api": "^2.19.3",
+    "@reduxjs/toolkit": "^2.2.7",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -16,6 +17,7 @@
     "react-icons": "^5.3.0",
     "react-image-file-resizer": "^0.4.8",
     "react-leaflet": "^4.2.1",
+    "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.1",
     "react-scripts": "5.0.1",
     "react-star-ratings": "^2.3.0",
