--- a/pwa/package.json
+++ b/pwa/package.json
@@ -19,9 +19,10 @@
     "react-image-file-resizer": "^0.4.8",
     "react-leaflet": "^4.2.1",
     "react-redux": "^9.1.2",
-    "react-router-dom": "^6.26.1",
+    "react-router-dom": "^6.26.2",
     "react-scripts": "5.0.1",
     "react-star-ratings": "^2.3.0",
+    "react-table": "^7.8.0",
     "socket.io-client": "^4.7.5",
     "web-vitals": "^2.1.4"
   },
