--- a/pwa/package.json
+++ b/pwa/package.json
@@ -9,10 +9,12 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "apexcharts": "^3.53.0",
     "axios": "^1.7.7",
     "date-fns": "^3.6.0",
     "leaflet": "^1.9.4",
     "react": "^18.3.1",
+    "react-apexcharts": "^1.4.1",
     "react-dom": "^18.3.1",
     "react-google-autocomplete": "^2.7.3",
     "react-icons": "^5.3.0",
